update: edited Dockerfile